
Changed pointer printouts to %010p instead of %8p, since the latter
didn't account for the possibility of a leading "0x".

Fixed typos in hex_dump().
----------------------------------------------------------------------
Tue Nov 18 23:15:59 2003                        Michael Jennings (mej)

Added D_*_IF macros for doing debugging conditionals more cleanly.

Removed the bogus "next" member function from the array and vector
interface classes.

Fleshed out the iterator interface and implemented it for arrays.

Fixed stupid mistake that made property functions overly type-strict.

Cleaned up the "show" member functions.

Added a routine for testing a regexp vs. a C string.

Property-ized the URL class objects.
----------------------------------------------------------------------
Wed Nov 19 17:39:01 2003                        Michael Jennings (mej)

Added linked_list and dlinked_list implementations of the vector
interface.

Added iterator functionality for linked_list and dlinked_list.

Added unit tests for the above.
----------------------------------------------------------------------
Fri Nov 21 16:39:23 2003                        Michael Jennings (mej)

Tasty new goodies thanks to Graphviz.
----------------------------------------------------------------------
Fri Nov 21 18:40:52 2003                        Michael Jennings (mej)

Added more docs to obj.c.  I need to go back and be more verbose on
some things, though.

These can be viewed online at http://www.eterm.org/libast/ for those
who'd like to get a sneak peak at them.  Please report any obvious
errors, typos, etc.  Those with developer access, feel free to
contribute or correct any errors or inconsistencies you find.
----------------------------------------------------------------------
Sun Nov 23 15:57:55 2003                        Michael Jennings (mej)

Cleanups required by doxygen 1.3.x.
----------------------------------------------------------------------