@@ -1,8 +1,5 @@
 #undef LIBAST_VERSION
-#undef WITH_DMALLOC
-#undef HAVE_SNPRINTF_BUG
 #undef DEBUG
-#undef CONFIG_SEARCH_PATH
 #undef AUTHORS
 #undef LIBAST_X11_SUPPORT
 #undef LIBAST_IMLIB2_SUPPORT
@@ -15,4 +12,5 @@
 #undef HAVE_RLIMIT_NPROC
 #undef HAVE_SYMLINK_OPEN_ERRNO_BUG
 #undef HAVE_SYMLINK_OPEN_SECURITY_HOLE
+#undef HAVE_SNPRINTF_BUG
 #undef HAVE_VSNPRINTF_BUG
